# LVGL-Linux-Framebuffer-Demo

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  main.c  main_dead_simple.c  mouse_cursor_icon.c  screens.c  screens.h
EEZ_STUDIO/: LINUX_FB_TEST.eez-project
drivers/: lv_linux_fbdev.c  lv_linux_fbdev.h
lvgl/: kudemo.c
lvgl/src/libs/gltf/gltf_data/: lv_gltf_bind.cpp  lv_gltf_data_internal.h  lv_gltf_data_internal.hpp
